syntax = "proto3";
package rpc;

import "pot.proto";
import "record.proto";

service RPC {
    rpc CreatePot (CreatePotRequest) returns (CreatePotResponse);
    rpc getAllPotsByAccountId(getAllPotsByAccountIdRequest)returns (getAllPotsByAccountIdResponse);
}

message CreatePotRequest {
    string accountId = 1;
    string name = 2;
}

message CreatePotResponse {
    pot.Pot pot = 1;
}

message getAllPotsByAccountIdResponse {
    repeated pot.Pot pots = 1; 
}

message getAllPotsByAccountIdRequest{
    string id = 1; 
}